--- a/Laby/makefile4
+++ b/Laby/makefile4
@@ -1,8 +1,11 @@
-prog4: IA.o pile.o accueil.o deplacement.o
-	gcc IA.o pile.o accueil.o deplacement.o -o prog4
+prog4: IA.o pile_tab.o region.o accueil.o deplacement.o
+	gcc IA.o pile_tab.o region.o accueil.o deplacement.o -o prog4
 	
-pile.o : pile.c
-	gcc -c pile.c
+pile_tab.o : pile_tab.c
+	gcc -c pile_tab.c
+	
+region.o : region.c
+	gcc -c region.c
 	
 IA.o: IA.c 
 	gcc -c IA.c 
@@ -12,3 +15,6 @@ accueil.o : accueil.c
 	
 deplacement.o : deplacement.c
 	gcc -c deplacement.c 
+
+clean: 
+	rm -f *.o prog4
